--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@material/dom": "^13.0.0",
+    "@material/theme": "^13.0.0"
+  }
 }
