--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "type": "module",
   "dependencies": {
     "@material/dom": "^13.0.0",
-    "@material/theme": "^13.0.0",
-    "@smui/button": "^5.0.0"
+    "@material/theme": "^13.0.0"
   }
 }
